--- a/JavaScript/Task_2/index.html
+++ b/JavaScript/Task_2/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Change element on click</title>
+<link rel="stylesheet" href="styles.css">
+</head>
 </head>
 <body>
 <!-- Button element that will change its text -->
